example/secondfile/objects/DHStatus_Reference_IP_Address_Data__c.object
<CustomObject>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>AddressType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Reference IP Address Datas</relationshipLabel>
        <relationshipName>DHStatus_Reference_IP_Address_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_PL_Group_Port_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-PL Group Port Data</label>
        <referenceTo>DHStatus_PL_Group_Port_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Reference IP Address Datas</relationshipLabel>
        <relationshipName>DHStatus_Reference_IP_Address_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_IP_Address_Data__c</fullName>
        <label>Reference IP Address Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Reference IP Address Data</label>
    <nameField>
        <displayFormat>DHReferenceIP-{000000}</displayFormat>
        <label>DHStatus-Reference IP Address Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Reference IP Address Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>